<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="result_label">Result</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="square">x²</string>
    <string name="percent">%</string>
    <string name="clear">Clear</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="enter_both_numbers">Enter both numbers</string>
    <string name="cannot_divide_by_zero">Cannot divide by zero</string>
    <string name="invalid_input">Invalid input</string>
    <string name="result_text">Result: %1$.2f</string>
    <string name="history_label">History:</string>
</resources>